svg vertical align fix

--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -51,7 +51,7 @@ body {
 }
 
 .va-mid{
-  vertical-align: sub;
+  vertical-align: mid;
 }
 
 .va-baseline {
